woops. fixed media query covering whole site

--- a/app/assets/stylesheets/_breakpoints.scss
+++ b/app/assets/stylesheets/_breakpoints.scss
@@ -1,2 +1,2 @@
-$medium: new-breakpoint(min-width 768px max-width 1024px);
+$medium: new-breakpoint(751px);
 $small: new-breakpoint(max-width 750px);
